--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -67,10 +67,10 @@
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Bestiary</strong><br>
-			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_05.pcz/download">5164_paizo_pathfinder_alpha_update_05.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_06.pcz/download">5164_paizo_pathfinder_alpha_update_06.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
-			Release Date: </em>2011-04-22</p>
+			Release Date: </em>2011-06-03</p>
 			
 		  <p>* Note: The Pathfinder Advanced Players Guide Alpha Update Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
 		</blockquote>
@@ -78,24 +78,48 @@
 		<p></p>
 		<h2><a name="Release_History">Release History</a></h2>
 		<blockquote>
+		  <p><strong>Release 6: June 3, 2011</strong></p>
+		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
+		  	improvements have been made as part of trackers that are still open.</p>
+
+			<ul>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-160'>DATA-160</a>] specialist Wizards receive bonus zero level slot when they shouldn't</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-270'>DATA-270</a>] Glove of Storing retains weight of contained item hand and ghost sound, but not in spell selection screen</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-275'>DATA-275</a>] Expanded Arcana feat does not work</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-276'>DATA-276</a>] Oathbow should provide +2 bonus to attack rolls</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-280'>DATA-280</a>] PF's Ring of Regeneration's description came from SRD</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-281'>DATA-281</a>] [PFAPG] Elemental wizard schools issues</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-282'>DATA-282</a>] [PF] Improve Familiar feat does not offer additional familiars</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-284'>DATA-284</a>] Bard Archetypes not set up to correctly remove abilities</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-286'>DATA-286</a>] Inquisitor does not have a TrackLVL bonus variable defined, making</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-289'>DATA-289</a>] Inquisitor abilities based on InquisitorLvl display incorrect values</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-293'>DATA-293</a>] Sirine Pearl should grant a Swim Speed</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-294'>DATA-294</a>] [PATHFINDER] [APG] Number of Oracle spells correctly 
+					calculated, not able to assign correct number</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-296'>DATA-296</a>] [PATHFINDER] [APG] Oracle with Haunted curse has mage 
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-297'>DATA-297</a>] APG Trait Bonuses Not Applying Correctly</li>
+			</ul>
+		</blockquote>
+
+		<blockquote>
 		  <p><strong>Release 5: April 22, 2011</strong></p>
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
 		  	improvements have been made as part of trackers that are still open.</p>
 
-		<ul>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-15'>DATA-15</a>] Specialist Wizard Weirdness</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-73'>DATA-73</a>] Monk Flurry of Blows in Pathfinder</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-226'>DATA-226</a>] Draconic Bloodline missing Skill Focus (Fly) as a bonus feat</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-229'>DATA-229</a>] Zen Archer - Way of the Bow</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-239'>DATA-239</a>] SEVERE Unconstructed Reference: Race Crocodile (Giant)</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-240'>DATA-240</a>] All Simple Templates which adjust size are incorrect</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-245'>DATA-245</a>] [PFCR] Missing weapon Net</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-246'>DATA-246</a>] PF Bard Favored Class Feature Bonus Spell Only Works Once</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-247'>DATA-247</a>] Grig incorrectly has 'cold' ability</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-265'>DATA-265</a>] Oracle Weapon Mastery CATEGORY issue</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-267'>DATA-267</a>] [PF] Staff Creation Cost</li>
-			<li>[<a href='http://jira.pcgen.org/browse/DATA-269'>DATA-269</a>] Tangle Bolt has incorrect Cost 166.1 vs. 226 listed</li>
-</ul>
+			<ul>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-15'>DATA-15</a>] Specialist Wizard Weirdness</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-73'>DATA-73</a>] Monk Flurry of Blows in Pathfinder</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-226'>DATA-226</a>] Draconic Bloodline missing Skill Focus (Fly) as a bonus feat</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-229'>DATA-229</a>] Zen Archer - Way of the Bow</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-239'>DATA-239</a>] SEVERE Unconstructed Reference: Race Crocodile (Giant)</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-240'>DATA-240</a>] All Simple Templates which adjust size are incorrect</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-245'>DATA-245</a>] [PFCR] Missing weapon Net</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-246'>DATA-246</a>] PF Bard Favored Class Feature Bonus Spell Only Works Once</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-247'>DATA-247</a>] Grig incorrectly has 'cold' ability</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-265'>DATA-265</a>] Oracle Weapon Mastery CATEGORY issue</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-267'>DATA-267</a>] [PF] Staff Creation Cost</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-269'>DATA-269</a>] Tangle Bolt has incorrect Cost 166.1 vs. 226 listed</li>
+			</ul>
 		</blockquote>
 
 		<blockquote>
