Preparing for APG Update 7 Issue#: NEWSOURCE-32
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@15259 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
-		<title>Release Notes for PCGen OOC Data Sets v5.16.4</title>
+		<title>Release Notes for PCGen OOC Data Sets v5.16.4: APG Update</title>
 		<link rel="stylesheet" type="text/css" href="http://sourceforge.net/cssdef.php">
 	</head>
 
@@ -12,7 +12,7 @@
 
 		<h1>Pathfinder Advanced Players Guide<br>
 		OOC Data Set for PCGen v5.16.4<br>
-		Release Notes for Release 6</h1>
+		Release Notes for Release 7</h1>
 		
 		<p>This is the fifth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
 		installed on top of all previous updates but doesn't require them.</p>
