--- a/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
+++ b/content/outofcycledatasets/release-notes/pcgen-pathfinder-apg-dataset-update-release-notes-5164.html
@@ -14,7 +14,7 @@
 		OOC Data Set for PCGen v5.16.4<br>
 		Release Notes for Release 7</h1>
 		
-		<p>This is the fifth OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
+		<p>This is the sixth and final OOC update to PCGen's alpha data set for the Pathfinder Advanced Players Guide. It can be 
 		installed on top of all previous updates but doesn't require them.</p>
 
         <p>Please note that this is a patch installer. In addition to the APG update it patches (overwrites) the 
@@ -29,6 +29,9 @@
         <a href="http://games.groups.yahoo.com/group/pcgen/">PCGen@Yahoo!</a> via email to our Yahoo! Group at 
         pcgen@yahoogroups.com. Please include the tag "[PATHFINDER]" in the subject line so the data team can quickly 
         identify your report.</p>
+        
+        <p><strong>NOTE: This is the last PCGen 5.16.4 compatible update to this collection of data sets. To take advantage of the 
+        	continued improvement in the Pathfinder data sets you will need to upgrade to the latest Developmental release (PCGen 5.17.8+).</strong></p>
 		
 
 		<h2>Table of Content</h2>
@@ -67,16 +70,37 @@
 		  <p><em>Title</em>: <strong>Pathfinder Roleplaying Game Advanced Players Guide</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Core Rulebook</strong><br>
 			<em>Title</em>: <strong>Pathfinder Roleplaying Game Bestiary</strong><br>
-			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_06.pcz/download">5164_paizo_pathfinder_alpha_update_06.pcz</a><br>
+			<em>File</em>: <a href="http://sourceforge.net/projects/pcgen/files/PCGen%20Stable%20Datasets/5.16.4%20OOC%20Data%20Sets/5164_piazo_pathfinder_alpha_update_06.pcz/download">5164_paizo_pathfinder_alpha_update_07.pcz</a><br>
 			<em>Publisher</em>: PCGen<br>
 			<em>Game Mode</em>: Pathfinder_RPG<em><br>
-			Release Date: </em>2011-06-03</p>
+			Release Date: </em>2011-08-02</p>
 			
 		  <p>* Note: The Pathfinder Advanced Players Guide Alpha Update Data Set is exactly that, an alpha data set, and as such will contain errors and exclusions. </p>
 		</blockquote>
 
 		<p></p>
 		<h2><a name="Release_History">Release History</a></h2>
+		<blockquote>
+		  <p><strong>Release : August 2, 2011</strong></p>
+		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
+		  	improvements have been made as part of trackers that are still open.</p>
+
+			<ul>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-256'>DATA-256</a>] Jump spell description displays incorrectly</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-300'>DATA-300</a>] Gnome racial trait &quot;Eternal Hope&quot; should also replace &quot;Hatred&quot; and count as two traits</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-301'>DATA-301</a>] Cannot Select Half-Elf Bonus Weapon with BAB = 0</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-302'>DATA-302</a>] Dual Proficiency Weapons aren't available if granted in MWP</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-424'>DATA-424</a>] Pathfinder Chronicler HD is incorrect</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-425'>DATA-425</a>] Missing Halfling Racial Weapon</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-426'>DATA-426</a>] Add a variable to alter Rage Power prerequisites independently of number of rage powers</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-428'>DATA-428</a>] Monk of the Four Winds and Elemental Fist selection issue</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-429'>DATA-429</a>] Oracle number of spells incorrect after choosing haunt or cure/inflict spell type</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-433'>DATA-433</a>] Human Favored Class Bonus to Oracle spells known is not functional</li>
+				<li>[<a href='http://jira.pcgen.org/browse/DATA-438'>DATA-438</a>] Halfling Weapon Familiarity incorrectly grants proficiency in Halfling Sling Staff</li>
+			</ul>
+		</blockquote>
+
+
 		<blockquote>
 		  <p><strong>Release 6: June 3, 2011</strong></p>
 		  <p>This list of resolved trackers represent only a part of the improvements made to the subject set. Other 
